# lfm-pc-agent

./: BENCHMARKS.md  Cargo.toml  README.md  clippy.toml  run-8b-local.sh  setup.sh  zeroclaw-run.sh
bench/: fixtures-v2.json  fixtures.json
src/: act.rs  bench.rs  main.rs  marks.rs  perceive.rs  reason.rs
